FIX - Some background colors are brighter for contrast.

--- a/css/app.css
+++ b/css/app.css
@@ -124,18 +124,18 @@ section ul > li {
   background-color: rgba(180, 177, 159, 0.7);
 }
 #thoughts > .section-header {
-  background-color: rgba(151, 145, 113, 0.7);
+  background-color: rgba(173, 164, 113, 0.7);
 }
 #thoughts > ul > li,
 #thoughts > ol > li {
-  background-color: rgba(151, 145, 113, 0.7);
+  background-color: rgba(173, 164, 113, 0.7);
 }
 #updates > .section-header {
-  background-color: rgba(233, 233, 233, 0.7);
+  background-color: rgba(176, 179, 158, 0.7);
 }
 #updates div > ul > li,
 #updates div > ol > li {
-  background-color: rgba(233, 233, 233, 0.7);
+  background-color: rgba(176, 179, 158, 0.7);
 }
 #updates iframe,
 #updates img {
